<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <ImageView
            android:id="@+id/detail_imageView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/detail_image_height"/>

    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:background="@color/colorAccent"/>

    <TextView
            android:id="@+id/detail_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Kiriakos Kotsis:"/>

    <TextView
            android:id="@+id/detail_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/lorem_ipsum"/>

    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="6dp"
            android:background="@color/colorAccent"/>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:text="@string/leave_a_comment"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="6dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:text="@string/name"/>

            <EditText
                    android:id="@+id/detail_name_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:paddingEnd="6dp"
                    android:text="@string/email"/>

            <EditText
                    android:id="@+id/detail_email_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:paddingEnd="6dp"
                    android:text="@string/comment"/>

            <EditText
                    android:id="@+id/detail_comment_editText"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/detail_comment_edit_height"/>

        </LinearLayout>

    </LinearLayout>

    <Button
            android:id="@+id/detail_post_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/post_comment"/>

    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:background="@color/colorAccent"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:text="Comments:"/>

</LinearLayout>